--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(shared_ptr_testing
     main.cpp
     shared_ptr.h
     test_object.cpp
-    test_object.h)
+    test_object.h control_block.h)
 
 set_property(TARGET shared_ptr_testing PROPERTY CXX_STANDARD 17)
 
